Did refactor new game
